@@ -29,6 +29,9 @@ deb-checkuid:
 	  debian/$*/usr/share/doc/$*/changelog.Debian'
 	@test ! -r changelog || \
 	  sh -cx 'install -m0644 changelog debian/$*/usr/share/doc/$*/'
+	@test ! -r debian/changelog.upstream || \
+	  sh -cx "install -m0644 debian/changelog.upstream \
+	    debian/$*/usr/share/doc/$*/changelog"
 	@test -r debian/$*/usr/share/doc/$*/changelog || \
 	  sh -cx 'mv debian/$*/usr/share/doc/$*/changelog.Debian \
 	    debian/$*/usr/share/doc/$*/changelog'
