@@ -1,6 +1,8 @@
 git (1:1.8.2-1.1) experimental; urgency=low
 
   * debian/rules: respect <num> in DEB_BUILD_OPTIONS=parallel=<num>.
+  * debian/implicit: check for debian/changelog.upstream.
+  * debian/rules: do not create ./changelog symlink (avoiding a race).
 
  -- Jonathan Nieder <jrnieder@gmail.com>  Sun, 07 Apr 2013 17:15:39 -0700
 
